# deepmail

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  TERMS.md  pyproject.toml  skills-lock.json
.agents/skills/deep-email/: SKILL.md
.agents/skills/deep-email/scripts/: setup.sh
.claude/skills/: deep-email
deepmail/: SKILL.md
poc/: .env.example  MCP_README.md  README.md  demo.py  pyproject.toml
poc/fixtures/family_corpus/: 001-family-dinner.md  002-dad-fishing.md  003-partner-grocery.md  004-sibling-birthday.md  005-mia-school.md  006-leo-pediatrician.md  007-oblique-swim-practice.md  008-oblique-kids-sick.md  009-oblique-soccer.md  010-reply-thanksgiving.md  011-reply-deep-quote.md  012-noise-work.md  013-noise-newsletter.md  014-noise-calendar.md  015-sparse-aunt-carol.md  016-sparse-grandma.md  017-sarah-school-pickup.md  018-emma-photo.md  019-noise-receipt.md  020-bob-handyman.md
poc/src/pi_email/: __init__.py  __main__.py  build_worker.py  calendar_email_parser.py  calendar_evidence.py  cli.py  contacts.py  corpus.py  embedder.py  embedding_store.py  entities.py  family_judge.py  filters.py  frontier.py  gmail_errors.py  gmail_searcher.py  html_strip.py  loop.py  materializer.py  mcp_entry.py  mcp_server.py  multi_searcher.py  oauth.py  proposer.py  searcher.py  strip_quotes.py  token_store.py  unified_cli.py
poc/tests/: test_calendar_email_parser.py  test_calendar_evidence.py  test_canonicalize.py  test_cli.py  test_deepmail_cli.py  test_embedder.py  test_entities_ner.py  test_family_judge.py  test_filters.py  test_frontier_rule_e.py  test_gmail_errors.py  test_gmail_searcher.py  test_html_strip.py  test_materializer.py  test_mcp_server.py  test_oauth_config.py  test_or_and_dedupe.py  test_proposer_grounding.py  test_seed_queries.py  test_smoke.py  test_token_store.py
research/: 01-gmail-api-mechanics.md  02-stopping-rule.md  03-reply-chain-noise.md  04-context-artifacts.md  05-prior-art.md
website/: package-lock.json  package.json  railway.json
website/public/: index.html  privacy.html  style.css  terms.html
