[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepmail"
version = "0.1.0"
description = "MCP server that gives AI agents deep understanding of your email"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "Dennison Bertram"}
]
keywords = ["mcp", "email", "gmail", "ai-agent", "context", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]
dependencies = [
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "mail-parser-reply>=1.4.0",
    "quotequail>=0.4.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-api-python-client>=2.196.0",
    "platformdirs>=4.9.6",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "numpy>=1.24",
    "spacy>=3.7.0,<3.8.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
deepmail = "pi_email.unified_cli:main"

[project.urls]
Homepage = "https://github.com/user/deepmail"
Repository = "https://github.com/user/deepmail"

[tool.hatch.build.targets.wheel]
packages = ["poc/src/pi_email"]

[tool.pytest.ini_options]
pythonpath = ["poc/src"]
testpaths = ["poc/tests"]
